# bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
bot/: __main__.py  client.py  config.py
bot/backend/: client.py
bot/cogs/: commands.py  events_members.py  events_messages.py  events_reactions.py  events_voice.py  guild_lifecycle.py  leave_poller.py
bot/ingest/: clickhouse_client.py  emitter.py  schema.py
bot/utils/: hashing.py
